Alexander Jose Illescas Flores: Traduccion de comentarios

--- a/index-3.html
+++ b/index-3.html
@@ -2,17 +2,17 @@
 <html class="no-js" lang="en">
 
 
-<!--  from demos.codexcoder.com/themeforest/html/casina/casina/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:12 GMT -->
+<!--  copia desde.codexcoder.com/themeforest/html/casina/casina/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:12 GMT -->
 <head>
 	<meta charset="utf-8">
 	<title>Casina</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- site favicon -->
+	<!-- sitio favicon -->
 	<link rel="icon" type="image/png" href="assets/images/favicon.png">
-	<!-- Place favicon.ico in the root directory -->
+	<!--Coloque favicon.ico en el directorio raíz-->
 
-	<!-- All stylesheet and icons css  -->
+	<!-- todos los estilos, iconos, y css  -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<link rel="stylesheet" href="assets/css/icofont.min.css">
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-	<!-- preloader start here -->
+	<!-- preloader empieza aqui -->
     <div class="preloader">
         <div class="preloader-inner">
             <div class="preloader-icon">
@@ -34,22 +34,22 @@
             </div>
         </div>
     </div>
-	<!-- preloader ending here -->
+	<!-- preloader termina aqui -->
 
-	<!-- scrollToTop start here -->
+	<!-- scrollToTop termina aqui -->
     <a href="#" class="scrollToTop"><i class="icofont-rounded-up"></i></a>
-    <!-- scrollToTop ending here -->
+    <!-- scrollToTop empieza aqui -->
 
-	<!-- ==========shape image Starts Here========== -->
+	<!-- ==========la seccion imagen de la forma empieza aqui========== -->
 	<div class="body-shape d-none">
 		<img src="assets/images/shape/body-shape.png" alt="shape">
 	</div>
-	<!-- ==========shape image end Here========== -->
+	<!-- ==========la seccion imagen de la forma termina aqui========== -->
 
 
 
 
-	<!-- ==========Header Section Starts Here========== -->
+	<!-- ==========la seccion cabeza empieza aqui========== -->
 	<header class="header-section style2">
 		<div class="container">
 			<div class="header-holder d-flex flex-wrap justify-content-between align-items-center">
@@ -153,7 +153,7 @@
 								<a href="login.html" class="login"><i class="icofont-user"></i> <span>LOG IN</span> </a>
 								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>SIGN UP</span></a>
 
-								<!-- toggle icons -->
+								<!-- alternar iconos -->
 								<div class="header-bar d-lg-none">
 									<span></span>
 									<span></span>
@@ -170,11 +170,11 @@
 		</div>
 
 	</header>
-	<!-- ==========Header Section Ends Here========== -->
+	<!-- ==========la seccion cabeza termina aqui========== -->
 
 
 
-	<!-- ===========Banner Section start Here========== -->
+	<!-- ===========la seccion banner empieza aqui========== -->
     <div class="banner__slider overflow-hidden">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -230,12 +230,12 @@
             </div>
         </div>
     </div>
-	<!-- ===========Banner Section Ends Here========== -->
+	<!-- ===========la seccion banner termina aqui========== -->
 
 
 
 
-	<!-- ===========About Section start Here========== -->
+	<!-- ===========Acerca de La sección empieza aqui========== -->
 	<section class="about-section style2 pb-0">
 		<div class="container">
 			<div class="section-wrapper padding-top padding-bottom">
@@ -297,10 +297,10 @@
 			</div>
 		</div>
 	</section>
-	<!-- ===========About Section Ends Here========== -->
+	<!-- ===========Acerca de La sección termina aquí========== -->
 
 
-	<!-- ===========Collection Section Start Here========== -->
+	<!-- ===========la seccion coleccion empieza aqui========== -->
 	<section class="collection-section padding-top padding-bottom">
 		<div class="container">
 			<div class="section-header">
@@ -351,11 +351,11 @@
 			</div>
 		</div>
 	</section>
-	<!-- ===========Collection Section Ends Here========== -->
+	<!-- ===========la seccion de coleccion termina aqui========== -->
 
 
 	
-	<!-- ===========Game Section Ends Here========== -->
+	<!-- ===========la seccion juegos empieza aqui========== -->
     <div class="game-section padding-top padding-bottom overflow-hidden" style="background-image:url(assets/images/match/bg.jpg)">
         <div class="container">
 			<div class="section-header">
@@ -474,10 +474,10 @@
 			</div>
         </div>
     </div>
-	<!-- ===========Game Section Ends Here========== -->
+	<!-- ===========la seccion juegos termina aqui========== -->
 
 
-	<!-- ===========Jaqport Section Ends Here========== -->
+	<!-- ===========la seccion jaqport empieza aqui========== -->
 	<div class="jaqport padding-top padding-bottom" style="background-image: url(assets/images/jaqport/jaqport-bg.jpg);">
 		<div class="container">
 			<div class="section-header">
@@ -738,9 +738,9 @@
 			</div>
 		</div>
 	</div>
-	<!-- ===========Jaqport Section Ends Here========== -->
+	<!-- ===========la seccion jaqport termina aqui========== -->
 
-	<!-- ===========Testimonial Section Start Here========== -->
+	<!-- ===========La sección de testimonios empiwza aqui========== -->
 	<div class="testimonial padding-top padding-bottom" style="background-image:url(assets/images/testimonial/bg.png)">
 		<div class="container">
 			<div class="section-header">
@@ -825,13 +825,13 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>	
 		</div>
 	</div>
-	<!-- ===========Testimonial Section Ends Here========== -->
+	<!-- ===========La sección de testimonios termina aquí========== -->
 
 
-	<!-- faq section start here -->
+	<!-- seccion faq empieza aqui -->
 	<section class="faq padding-top padding-bottom">
 		<div class="container">
 			<div class="row justify-content-center flex-row-reverse">
@@ -909,11 +909,11 @@
 			</div>
 		</div>
 	</section>
-	<!-- faq section ending here -->
+	<!-- seccion faq termina aqui -->
 
 
 
-	<!-- ================ footer Section start Here =============== -->
+	<!-- ================ seccion de pie de pagina empieza aqui =============== -->
     <footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
         <div class="footer-top">
             <div class="container">
@@ -1078,7 +1078,7 @@
             </div>
         </div>
     </footer>
-    <!-- ================ footer Section end Here =============== -->
+    <!-- ================ seccion pie de pagina termina aqui =============== -->
 
 
 
@@ -1086,7 +1086,7 @@
 
 
 
-	<!-- All Needed JS -->
+	<!-- Todo lo necesario de js -->
 	<script src="assets/js/vendor/jquery-3.7.1.min.js"></script>
 	<script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
 	<script src="assets/js/circularProgressBar.min.js"></script>
@@ -1100,7 +1100,7 @@
 	<script src="assets/js/main.js"></script>
 
 
-	<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+	<!-- Google Analytics: cambie UA-XXXXX-Y para que sea el ID de su sitio. -->
 	<script>
 		window.ga = function () {
 			ga.q.push(arguments)
@@ -1119,5 +1119,5 @@
 </body>
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:15 GMT -->
+<!-- Reflejado desde demos.codexcoder.com/themeforest/html/casina/casina/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:15 GMT -->
 </html>
