--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 
 	<!-- sitios favicon -->
 	<link rel="icon" type="image/png" href="assets/images/favicon.png">
-	<!-- Place favicon.ico in the root directory -->
+	<!--Coloque favicon.ico en el directorio raíz-->
 
 	<!-- todos los stylesheet y iconos css  -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
