--- a/jaqpot.html
+++ b/jaqpot.html
@@ -2,17 +2,17 @@
 <html class="no-js" lang="en">
 
 
-<!--  from demos.codexcoder.com/themeforest/html/casina/casina/jaqpot.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:16 GMT -->
+<!--  reflejado desde.codexcoder.com/themeforest/html/casina/casina/jaqpot.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:16 GMT -->
 <head>
 	<meta charset="utf-8">
 	<title>Casina Gallery</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- site favicon -->
+	<!-- sitio de favicon -->
 	<link rel="icon" type="image/png" href="assets/images/favicon.png">
-	<!-- Place favicon.ico in the root directory -->
+	<!-- Coloque favicon.ico en el directorio raíz -->
 
-	<!-- All stylesheet and icons css  -->
+	<!-- Todos los estilos, iconos y css  -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<link rel="stylesheet" href="assets/css/icofont.min.css">
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-	<!-- preloader start here -->
+	<!-- preloader comienza aqui -->
     <div class="preloader">
         <div class="preloader-inner">
             <div class="preloader-icon">
@@ -34,22 +34,22 @@
             </div>
         </div>
     </div>
-	<!-- preloader ending here -->
+	<!-- preloader termina aqui -->
 
-	<!-- scrollToTop start here -->
+	<!-- scrollToTop comienza aqui -->
     <a href="#" class="scrollToTop"><i class="icofont-rounded-up"></i></a>
-    <!-- scrollToTop ending here -->
+    <!-- scrollToTop termina aqui -->
 
-	<!-- ==========shape image Starts Here========== -->
+	<!-- ==========la imagen de la forma empieza aquí========== -->
 	<div class="body-shape">
 		<img src="assets/images/shape/body-shape.png" alt="shape">
 	</div>
-	<!-- ==========shape image end Here========== -->
+	<!-- ==========la imagen de la forma termina aqui========== -->
 
 
 
 
-	<!-- ==========Header Section Starts Here========== -->
+	<!-- ==========la seccion cabeza empieza aqui========== -->
 	<header class="header-section">
 		<div class="container">
 			<div class="header-holder d-flex flex-wrap justify-content-between align-items-center">
@@ -153,7 +153,7 @@
 								<a href="login.html" class="login"><i class="icofont-user"></i> <span>LOG IN</span> </a>
 								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>SIGN UP</span></a>
 
-								<!-- toggle icons -->
+								<!-- alternar iconos -->
 								<div class="header-bar d-lg-none">
 									<span></span>
 									<span></span>
@@ -170,11 +170,11 @@
 		</div>
 
 	</header>
-	<!-- ==========Header Section Ends Here========== -->
+	<!-- ==========la seccion cabeza termina aqui========== -->
 
 
 
-	<!-- ===========PageHeader Section Start Here========== -->
+	<!-- ===========la seccion encabezado empieza aqui========== -->
 	<section class="pageheader-section" style="background-image: url(assets/images/pageheader/bg.jpg);">
 		<div class="container">
             <div class="section-wrapper text-center text-uppercase">
@@ -188,10 +188,10 @@
             </div>
 		</div>
 	</section>
-	<!-- ===========PageHeader Section Ends Here========== -->
+	<!-- ===========la seccion encabezado termina aqui========== -->
 
 
-	<!-- ===========Jaqport Section Ends Here========== -->
+	<!-- ===========la seccion jacport empieza aqui========== -->
 	<div class="jaqport padding-top padding-bottom" style="background-image: url(assets/images/jaqport/jaqport-bg.jpg);">
 		<div class="container">
 			<div class="section-header">
@@ -488,14 +488,14 @@
 			</div>
 		</div>
 	</div>
-	<!-- ===========Jaqport Section Ends Here========== -->
+	<!-- ===========la seccion jacport termina aqui========== -->
 
 
 
 
 
 
-	<!-- ================ footer Section start Here =============== -->
+	<!-- ================ la seccion pie de pagina empieza aqui =============== -->
     <footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
         <div class="footer-top">
             <div class="container">
@@ -660,7 +660,7 @@
             </div>
         </div>
     </footer>
-    <!-- ================ footer Section end Here =============== -->
+    <!-- ================ la seccion pie de pagina termina aqui =============== -->
 
 
 
@@ -668,7 +668,7 @@
 
 
 
-	<!-- All Needed JS -->
+	<!-- todo lo necesario del js -->
 	<script src="assets/js/vendor/jquery-3.7.1.min.js"></script>
 	<script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
 	<script src="assets/js/circularProgressBar.min.js"></script>
@@ -682,7 +682,7 @@
 	<script src="assets/js/main.js"></script>
 
 
-	<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+	<!-- Google Analytics: cambie UA-XXXXX-Y para que sea el ID de su sitio. -->
 	<script>
 		window.ga = function () {
 			ga.q.push(arguments)
@@ -701,5 +701,5 @@
 </body>
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/jaqpot.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:16 GMT -->
+<!-- reflejado desde demos.codexcoder.com/themeforest/html/casina/casina/jaqpot.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:16 GMT -->
 </html>
