--- a/login.html
+++ b/login.html
@@ -2,17 +2,17 @@
 <html class="no-js" lang="en">
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:22 GMT -->
+<!-- Reflejado desde demos.codexcoder.com/themeforest/html/casina/casina/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:22 GMT -->
 <head>
 	<meta charset="utf-8">
 	<title>Casina Team Single</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- site favicon -->
+	<!-- sitio favicon -->
 	<link rel="icon" type="image/png" href="assets/images/favicon.png">
-	<!-- Place favicon.ico in the root directory -->
+	<!--Coloque favicon.ico en el directorio raíz-->
 
-	<!-- All stylesheet and icons css  -->
+	<!-- todos los estilos, iconos, y css  -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<link rel="stylesheet" href="assets/css/icofont.min.css">
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-	<!-- preloader start here -->
+	<!-- preloader empieza aqui -->
     <div class="preloader">
         <div class="preloader-inner">
             <div class="preloader-icon">
@@ -34,22 +34,22 @@
             </div>
         </div>
     </div>
-	<!-- preloader ending here -->
+	<!-- preloader termina aqui -->
 
-	<!-- scrollToTop start here -->
+	<!-- scrollToTop termina aqui -->
     <a href="#" class="scrollToTop"><i class="icofont-rounded-up"></i></a>
-    <!-- scrollToTop ending here -->
+    <!-- scrollToTop empieza aqui -->
 
-	<!-- ==========shape image Starts Here========== -->
+	<!-- ==========la seccion imagen de la forma empieza aqui========== -->
 	<div class="body-shape">
 		<img src="assets/images/shape/body-shape.png" alt="shape">
 	</div>
-	<!-- ==========shape image end Here========== -->
+	<!-- ==========la seccion imagen de la forma termina aqui========== -->
 
 
 
 
-	<!-- ==========Header Section Starts Here========== -->
+	<!-- ==========la seccion cabeza empieza aqui========== -->
 	<header class="header-section">
 		<div class="container">
 			<div class="header-holder d-flex flex-wrap justify-content-between align-items-center">
@@ -153,7 +153,7 @@
 								<a href="login.html" class="login"><i class="icofont-user"></i> <span>LOG IN</span> </a>
 								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>SIGN UP</span></a>
 
-								<!-- toggle icons -->
+								<!-- alternar iconos -->
 								<div class="header-bar d-lg-none">
 									<span></span>
 									<span></span>
@@ -170,7 +170,7 @@
 		</div>
 
 	</header>
-	<!-- ==========Header Section Ends Here========== -->
+	<!-- ==========la seccion cabeza termina aqui========== -->
 
 
 
@@ -237,7 +237,7 @@
 
 
 
-	<!-- ================ footer Section start Here =============== -->
+	<!-- ================ seccion de pie de pagina empieza aqui =============== -->
     <footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
         <div class="footer-top">
             <div class="container">
@@ -402,7 +402,7 @@
             </div>
         </div>
     </footer>
-    <!-- ================ footer Section end Here =============== -->
+    <!-- ================ seccion pie de pagina termina aqui =============== -->
 
 
 
@@ -410,7 +410,7 @@
 
 
 
-	<!-- All Needed JS -->
+	<!-- Todo lo necesario de js -->
 	<script src="assets/js/vendor/jquery-3.7.1.min.js"></script>
 	<script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
 	<script src="assets/js/circularProgressBar.min.js"></script>
@@ -424,7 +424,7 @@
 	<script src="assets/js/main.js"></script>
 
 
-	<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+	<!-- Google Analytics: cambie UA-XXXXX-Y para que sea el ID de su sitio. -->
 	<script>
 		window.ga = function () {
 			ga.q.push(arguments)
@@ -443,5 +443,5 @@
 </body>
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:22 GMT -->
+<!-- Reflejado desde demos.codexcoder.com/themeforest/html/casina/casina/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:22 GMT -->
 </html>
