--- a/tournament.html
+++ b/tournament.html
@@ -20,8 +20,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightcase@2.5.0/src/css/lightcase.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.min.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11.6.0/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -996,8 +995,7 @@
 	<script src="assets/js/vendor/jquery-3.7.1.min.js"></script>
 	<script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
 	<script src="assets/js/circularProgressBar.min.js"></script>
-	<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/isotope-layout@3.0.7/dist/isotope.pkgd.min.js"></script>	<script src="https://cdn.jsdelivr.net/npm/swiper@11.6.0/swiper-bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/lightcase@2.5.0/src/js/lightcase.min.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/wow.min.js"></script>
