--- a/index-3.html
+++ b/index-3.html
@@ -98,7 +98,7 @@
 							<div class="menu-area">
 								<ul class="menu">
 									<li>
-										<a href="#0">Home</a>
+										<a href="#0">index-3 Inicio</a>
 										<ul class="submenu">
 											<li><a href="index-2.html">Home  Page One</a></li>
 											<li><a href="index-3.html" class="active">Home Page Two</a></li>
