--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 							<div class="menu-area">
 								<ul class="menu">
 									<li>
-										<a href="#0">Home</a>
+										<a href="#0">INICIO</a>
 										<ul class="submenu">
-											<li><a href="index-2.html" class="active">Home  Page One</a></li>
-											<li><a href="index-3.html">Home Page Two</a></li>
+											<li><a href="index-2.html" class="active">INICIO  PRIMERA PAGINA</a></li>
+											<li><a href="index-3.html">INICIO SEGUNDA PAGINA</a></li>
 										</ul>
 									</li>
 									<li>
