Editando Alexander Illescas Flores

--- a/partners.html
+++ b/partners.html
@@ -42,7 +42,7 @@
 
 	<!-- ==========la seccion imagen de la forma empieza aqui========== -->
 	<div class="body-shape">
-		<img src="assets/images/shape/body-shape.png" alt="shape">
+		<img src="assets/images/shape/image.png" alt="shape">" alt="shape">
 	</div>
 	<!-- ==========la seccion imagen de la forma termina aqui========== -->
 
@@ -56,7 +56,7 @@
 				<div class="brand-logo d-none d-lg-inline-block">
 					<div class="logo">
 						<a href="index-2.html">
-							<img src="assets/images/logo/logo.png" alt="logo">
+							<img src="assets/images/logo/atlant.png" alt="logo">" alt="logo">
 						</a>
 					</div>
 				</div>
@@ -93,7 +93,7 @@
 					<div class="header-bottom">
 						<div class="header-wrapper justify-content-lg-end">
 							<div class="mobile-logo d-lg-none">
-								<a href="index-2.html"><img src="assets/images/logo/logo.png" alt="logo"></a>
+								<a href="index-2.html"><img src="assets/images/logo/atlant.png" alt="logo">" alt="logo"></a>
 							</div>
 							<div class="menu-area">
 								<ul class="menu">
@@ -442,7 +442,7 @@
                         <div class="footer-middle-item-wrapper">
                             <div class="footer-middle-item mb-lg-0">
                                 <div class="fm-item-title mb-4">
-                                    <img src="assets/images/logo/logo.png" alt="logo">
+                                    <img src="assets/images/logo/atlant.png" alt="logo">" alt="logo">
                                 </div>
                                 <div class="fm-item-content">
                                     <p class="mb-4">Upropriate brand economca sound technolog after covalent technology enable prospective wastng markets whereas propriate and brand economca sound technolog</p>
