<i class="icofont-location-pin">

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 				<div class="brand-logo d-none d-lg-inline-block">
 					<div class="logo">
 						<a href="index-2.html">
-							<img src="assets/images/logo/atlant.png" alt="logo">" alt="logo">
+							<img src="assets/images/logo/atlant.png" alt="logo">
 						</a>
 					</div>
 				</div>
@@ -65,27 +65,21 @@
 						<div class="header-top-area">
 							<ul class="left">
 								<li>
-									<i class="icofont-ui-call"></i> <span>+800-123-4567 6587</span>
+									<i class="icofont-ui-call"></i>(01) 705-4440></i>
 								</li>
 								<li>
-									<i class="icofont-location-pin"></i> Beverley, New York 224 USA
+									<i class="icofont-location-alt"></i> Av. Alfredo Benavides 430, Miraflores 15074</i>
 								</li>
 							</ul>
 							<ul class="social-icons d-flex align-items-center">
 								<li>
-									<a href="#" class="fb"><i class="icofont-facebook-messenger"></i></a>
+									<a href="https://www.facebook.com/AtlanticCityPe" class="fb"><i class="icofont-facebook-messenger"></i></a>
 								</li>
 								<li>
-									<a href="#" class="twitter"><i class="icofont-twitter"></i></a>
+									<a href="https://x.com/AcityCasino" class="twitter"><i class="icofont-twitter"></i></a>
 								</li>
 								<li>
-									<a href="#" class="vimeo"><i class="icofont-vimeo"></i></a>
-								</li>
-								<li>
-									<a href="#" class="skype"><i class="icofont-skype"></i></a>
-								</li>
-								<li>
-									<a href="#" class="rss"><i class="icofont-rss-feed"></i></a>
+									<a href="https://www.youtube.com/@atlanticcitycasinosports" class="Youtube"><i class="icofont-youtube-play"></i></a>
 								</li>
 							</ul>
 						</div>
@@ -93,53 +87,53 @@
 					<div class="header-bottom">
 						<div class="header-wrapper justify-content-lg-end">
 							<div class="mobile-logo d-lg-none">
-								<a href="index-2.html"><img src="assets/images/logo/atlant.png" alt="logo">" alt="logo"></a>
+								<a href="index-2.html"><img src="assets/images/logo/atlant.png" alt="logo"></a>
 							</div>
 							<div class="menu-area">
 								<ul class="menu">
 									<li>
-										<a href="#0">Home</a>
+										<a href="#0">Casa</a>
 										<ul class="submenu">
-											<li><a href="index-2.html">Home  Page One</a></li>
-											<li><a href="index-3.html">Home Page Two</a></li>
+											<li><a href="index-2.html">Pagina Uno</a></li>
+											<li><a href="index-3.html">Pagina Dos</a></li>
 										</ul>
 									</li>
 
 									<li>
 										<a href="#0">Features</a>
 										<ul class="submenu">
-											<li><a href="about.html" class="active">About</a></li>
+											<li><a href="about.html" class="active">Nosotros</a></li>
 											<li><a href="jaqpot.html">Casino Jackpot</a></li>
 											<li>
-												<a href="#0">games</a>
+												<a href="#0">Juegos</a>
 												<ul class="submenu">
-													<li><a href="game-list.html">game list 1</a></li>
-													<li><a href="game-list2.html">game list 2</a></li>
+													<li><a href="game-list.html">Lista de Juego 1</a></li>
+													<li><a href="game-list2.html">Lista de Juego 2</a></li>
 												</ul>
 											</li>
-											<li><a href="partners.html">partners</a></li>
-											<li><a href="pricing-plan.html">Pricing Plan</a></li>
+											<li><a href="partners.html">Socios</a></li>
+											<li><a href="pricing-plan.html">Plan de Precios</a></li>
 											
 											<li>
-												<a href="#0">accounts</a>
+												<a href="#0">Cuentas</a>
 												<ul class="submenu">
-													<li><a href="login.html">login</a></li>
-													<li><a href="signup.html">signup</a></li>
+													<li><a href="login.html">Iniciar Sesion</a></li>
+													<li><a href="signup.html">Registrarse</a></li>
 												</ul>
 											</li>
 											<li>
-												<a href="#0">Shop</a>
+												<a href="#0">Tienda</a>
 												<ul class="submenu">
-													<li><a href="shop.html">shop</a></li>
-													<li><a href="shop-single.html">Shop Details</a></li>
-													<li><a href="cart-page.html">Cart Page</a></li>
+													<li><a href="shop.html">Tienda</a></li>
+													<li><a href="shop-single.html">Detalles de la Tienda</a></li>
+													<li><a href="cart-page.html">Pagina del Carrito</a></li>
 												</ul>
 											</li>
-											<li><a href="404.html">404 Page</a></li>
+											<li><a href="404.html">Pagina 404</a></li>
 
 										</ul>
 									</li>
-									<li><a href="tournament.html">Tournament</a></li>
+									<li><a href="tournament.html">Torneos</a></li>
 									<li>
 										<a href="#0">Blog</a>
 										<ul class="submenu">
@@ -148,10 +142,10 @@
 											<li><a href="blog-single.html">Blog Single</a></li>
 										</ul>
 									</li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="contact.html">Contactos</a></li>
 								</ul>
-								<a href="login.html" class="login"><i class="icofont-user"></i> <span>LOG IN</span> </a>
-								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>SIGN UP</span></a>
+								<a href="login.html" class="login"><i class="icofont-user"></i> <span>Iniciar Sesion</span> </a>
+								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>Registrarse</span></a>
 
 								<!-- iconos de alternancia -->
 								<div class="header-bar d-lg-none">
@@ -177,11 +171,11 @@
 	<section class="pageheader-section" style="background-image: url(assets/images/pageheader/bg.jpg);">
 		<div class="container">
             <div class="section-wrapper text-center text-uppercase">
-                <h2 class="pageheader-title">about Casina</h2>
+                <h2 class="pageheader-title">Acerca del casino</h2>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center mb-0">
-                      <li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">About Us</li>
+                      <li class="breadcrumb-item"><a href="index-2.html">Casa</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">Sobre Nosotros</li>
                     </ol>
                 </nav>
             </div>
@@ -209,19 +203,18 @@
 					<div class="col-lg-6 col-md-10">
 						<div class="about-wrapper">
 							<div class="section-header">
-								<h2>we are professional team esport</h2>
+								<h2>Somos un equipo profesional de eSports</h2>
 							</div>
 							<div class="about-content">
-								<p>At Modeltheme, we show only the best websites and portfolios built completely with passion simplicity and creativity!</p>
+								<p>En Atlantic city, mostramos solo los mejores sitios web y portafolios creados con pasión, sencillez y creatividad.</p>
 								<ul class="about-list">
 									<li class="about-item d-flex flex-wrap">
 										<div class="about-item-thumb">
 											<img src="assets/images/about/icon-1.png" alt="Icon">
 										</div>
 										<div class="about-item-content">
-											<h5>103k Community Earning</h5>
-											<p>Distinctively provide acces mutfuncto users whereas
-												communicate leveraged services</p>
+											<h5>103K mil en ganancias de la comunidad</h5>
+											<p>Brindamos acceso exclusivo a usuarios multifuncionales y comunicamos servicios mejorados.</p>
 										</div>
 									</li>
 									<li class="about-item d-flex flex-wrap">
@@ -229,9 +222,8 @@
 											<img src="assets/images/about/icon-2.png" alt="Icon">
 										</div>
 										<div class="about-item-content">
-											<h5>34m+ Registered Players</h5>
-											<p>Distinctively provide acces mutfuncto users whereas
-												communicate leveraged services</p>
+											<h5>Más de 34M de jugadores registrados</h5>
+											<p>Brindamos acceso único a usuarios multifuncionales y ofrecemos servicios mejorados.</p>
 										</div>
 									</li>
 									<li class="about-item d-flex flex-wrap">
@@ -239,9 +231,8 @@
 											<img src="assets/images/about/icon-3.png" alt="Icon">
 										</div>
 										<div class="about-item-content">
-											<h5>240k Streams Complete</h5>
-											<p>Distinctively provide acces mutfuncto users whereas
-												communicate leveraged services</p>
+											<h5>Más de 240 mil transmisiones realizadas</h5>
+											<p>Brindamos acceso único a usuarios multifuncionales y ofrecemos servicios optimizados.</p>
 										</div>
 									</li>
 								</ul>
@@ -259,7 +250,7 @@
     <div class="game-section padding-top padding-bottom overflow-hidden" style="background-image:url(assets/images/match/bg.jpg)">
         <div class="container">
 			<div class="section-header">
-				<h2>RELATED OTHER GAMES</h2>
+				<h2>OTROS JUEGOS RELACIONADOS</h2>
 			</div>
             <ul class="game__filter">
                 <li data-filter="*" class="is-checked"><span class="category">All</span></li>
@@ -281,7 +272,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span>play now<i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -366,8 +357,8 @@
 				<div class="col-lg-6 col-12">
 					<div class="faq-left-part">
 						<div class="section-header text-start">
-							<h2>FREQUENTLY ASK QUESTION</h2>
-							<p>At Modeltheme we show only the best websites and portfolios built completely with passion simplicity and creativity !</p>
+							<h2>Preguntas Frecuentes</h2>
+							<p>En Atlantic City mostramos solo los mejores sitios web y portafolios, creados con total pasión, sencillez y creatividad</p>
 						</div>
 						<div class="section-wrapper">
 							<ul class="accordion">
@@ -377,11 +368,11 @@
 											<div class="icon"></div>
 										</div>
 										<div class="right">
-											<h6>01. How do I create Casine Account ?</h6>
+											<h6>01. ¿Cómo registrarme en Atlantic City?</h6>
 										</div>
 									</div>
 									<div class="accordion-answer">
-										<p>Competen diseminate mpactful proceses with client centered Holistic maximize multimedia based supply chains for resourc channels e-leveling action items.</p>
+										<p>Difundimos de manera eficaz procesos impactantes con un enfoque integral y centrado en el cliente, maximizando las cadenas de suministro basadas en contenido multimedia y optimizando las tareas</p>
 									</div>
 								</li>
 								<li class="accordion-item">
@@ -390,11 +381,11 @@
 											<div class="icon"></div>
 										</div>
 										<div class="right">
-											<h6>02. Where can I Redeem My Earnings ?</h6>
+											<h6>02. ¿Dónde retiro mis ganancias</h6>
 										</div>
 									</div>
 									<div class="accordion-answer active">
-										<p>Competen diseminate mpactful proceses with client centered Holistic maximize multimedia based supply chains for resourc channels e-leveling action items.</p>
+										<p>Difundimos de manera eficiente procesos efectivos con un enfoque integral y centrado en el cliente, maximizando las cadenas de suministro basadas en contenido multimedia y optimizando las tareas.</p>
 									</div>
 								</li>
 								<li class="accordion-item">
@@ -403,11 +394,11 @@
 											<div class="icon"></div>
 										</div>
 										<div class="right">
-											<h6>03. How do I Start Playing ?</h6>
+											<h6>03. ¿Cómo puedo empezar a jugar?</h6>
 										</div>
 									</div>
 									<div class="accordion-answer">
-										<p>Competen diseminate mpactful proceses with client centered Holistic maximize multimedia based supply chains for resourc channels e-leveling action items.</p>
+										<p>Gestionamos procesos efectivos con un enfoque integral en el cliente, mejorando las cadenas de suministro multimedia y agilizando las tareas.</p>
 									</div>
 								</li>
 								<li class="accordion-item">
@@ -416,11 +407,11 @@
 											<div class="icon"></div>
 										</div>
 										<div class="right">
-											<h6>04. How do I Move Up a Level ?</h6>
+											<h6>04. ¿Cómo puedo subir de nivel?</h6>
 										</div>
 									</div>
 									<div class="accordion-answer">
-										<p>Competen diseminate mpactful proceses with client centered Holistic maximize multimedia based supply chains for resourc channels e-leveling action items.</p>
+										<p>Gestionamos procesos efectivos con enfoque en el cliente, mejorando las cadenas de suministro multimedia y agilizando las tareas.</p>
 									</div>
 								</li>
 							</ul>
@@ -446,7 +437,7 @@
                                     <img src="assets/images/footer/icons/01.png" alt="Phone-icon">
                                 </div>
                                 <div class="lab-content">
-                                    <span>Phone Number : +88012 345 678 912</span>
+                                    <span>Numero Celular : (01) 705-4440</span>
                                 </div>
                             </div>
                         </div>
@@ -458,7 +449,7 @@
                                     <img src="assets/images/footer/icons/02.png" alt="email-icon">
                                 </div>
                                 <div class="lab-content">
-                                    <span>Email : youremail@gmail.com</span>
+                                    <span>Correo : contacto@casinoatlanticcity.com</span>
                                 </div>
                             </div>
                         </div>
@@ -470,7 +461,7 @@
                                     <img src="assets/images/footer/icons/03.png" alt="location-icon">
                                 </div>
                                 <div class="lab-content">
-                                    <span>Address : 30 North West New York</span>
+                                    <span>Dirección : Av. Alfredo Benavides 430, Miraflores 15074</span>
                                 </div>
                             </div>
                         </div>
@@ -485,10 +476,10 @@
                         <div class="footer-middle-item-wrapper">
                             <div class="footer-middle-item mb-lg-0">
                                 <div class="fm-item-title mb-4">
-                                    <img src="assets/images/logo/atlant.png" alt="logo">" alt="logo">
+                                    <img src="assets/images/logo/atlant.png" alt="logo">
                                 </div>
                                 <div class="fm-item-content">
-                                    <p class="mb-4">Upropriate brand economca sound technolog after covalent technology enable prospective wastng markets whereas propriate and brand economca sound technolog</p>
+                                    <p class="mb-4">Aplicamos tecnologías sólidas y rentables para la marca tras integrar tecnología avanzada, lo que permite acceder a mercados emergentes, manteniendo siempre una marca y tecnología económicamente sólidas.</p>
 									<ul class="match-social-list d-flex flex-wrap align-items-center">
 										<li><a href="#"><img src="assets/images/match/social-1.png" alt="vimeo"></a></li>
 										<li><a href="#"><img src="assets/images/match/social-2.png" alt="youtube"></a></li>
