--- a/blog-2.html
+++ b/blog-2.html
@@ -56,7 +56,7 @@
 				<div class="brand-logo d-none d-lg-inline-block">
 					<div class="logo">
 						<a href="index-2.html">
-							<img src="assets/images/logo/atlant.png" alt="logo">" alt="logo">
+							<img src="assets/images/logo/atlant.png" alt="logo">
 						</a>
 					</div>
 				</div>
@@ -65,25 +65,23 @@
 						<div class="header-top-area">
 							<ul class="left">
 								<li>
-									<i class="icofont-ui-call"></i> <span>+800-123-4567 6587</span>
+									<i class="icofont-ui-call"></i>(01) 705-4440></i> <span>+800-123-4567 6587</span>
 								</li>
 								<li>
-									<i class="icofont-location-pin"></i> Beverley, New York 224 USA
+									<i class="icofont-location-alt"></i> Av. Alfredo Benavides 430, Miraflores 15074</i> Beverley, New York 224 USA
 								</li>
 							</ul>
 							<ul class="social-icons d-flex align-items-center">
 								<li>
-									<a href="#" class="fb"><i class="icofont-facebook-messenger"></i></a>
+									<a href="https://www.facebook.com/AtlanticCityPe" class="fb"><i class="icofont-facebook-messenger"></i></a>
 								</li>
 								<li>
-									<a href="#" class="twitter"><i class="icofont-twitter"></i></a>
+									<a href="https://x.com/AcityCasino" class="twitter"><i class="icofont-twitter"></i></a>
 								</li>
 								<li>
-									<a href="#" class="vimeo"><i class="icofont-vimeo"></i></a>
+									<a href="https://www.youtube.com/@atlanticcitycasinosports" class="Youtube"><i class="icofont-youtube-play"></i></a>
 								</li>
-								<li>
-									<a href="#" class="skype"><i class="icofont-skype"></i></a>
-								</li>
+								<a href="https://www.youtube.com/@atlanticcitycasinosports" class="Youtube"><i class="icofont-youtube-play"></i></a>
 								<li>
 									<a href="#" class="rss"><i class="icofont-rss-feed"></i></a>
 								</li>
@@ -93,7 +91,7 @@
 					<div class="header-bottom">
 						<div class="header-wrapper justify-content-lg-end">
 							<div class="mobile-logo d-lg-none">
-								<a href="index-2.html"><img src="assets/images/logo/atlant.png" alt="logo">" alt="logo"></a>
+								<a href="index-2.html"><img src="assets/images/logo/atlant.png" alt="logo"></a>
 							</div>
 							<div class="menu-area">
 								<ul class="menu">
@@ -546,7 +544,7 @@
                         <div class="footer-middle-item-wrapper">
                             <div class="footer-middle-item mb-lg-0">
                                 <div class="fm-item-title mb-4">
-                                    <img src="assets/images/logo/atlant.png" alt="logo">" alt="logo">
+                                    <img src="assets/images/logo/atlant.png" alt="logo">
                                 </div>
                                 <div class="fm-item-content">
                                     <p class="mb-4">Upropriate brand economca sound technolog after covalent technology enable prospective wastng markets whereas propriate and brand economca sound technolog</p>
